# hitsz-connect-verge

./: .gitignore  README.md  README.zh-CN.md  edit_clash_rules.sh  installer.iss  main.py  main_fluent.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: main.py  main_fluent.py  main_fluent2.py
app/common/: resources.py  style_sheet.py  version.py
app/resources/: resources.qrc
app/services/: update_service.py
app/styles/: dark.qss  light.qss
app/utils/: advanced_panel.py  check_for_update_fluent.py  connection_utils.py  theme_manager.py  tray_utils.py
app/view/: main_window_fluent.py  setting_interface_fluent.py
app/views/: advanced_panel.py  main_window.py  main_window_fluent.py  menu_utils.py  setting_interface_fluent.py
utils/: advanced_panel.py  advanced_panel_fluent.py  common.py  config_utils.py  connection_utils.py  macos_utils.py  menu_utils.py  menu_utils_fluent.py  set_proxy.py  startup_utils.py  tray_utils.py
