[project]
name = "hitsz-connect-verge"
version = "0.1.0"
description = "A GUI for connecting to the HITSZ Verge network."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.8.1.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
pyobjc = [
  { git = "https://github.com/ronaldoussoren/pyobjc", tag = "11.0", marker = "sys_platform == 'darwin'" }
]

[dependency-groups]
dev = [
  "pyinstaller>=6.11.1"
]